<resources>
    <string name="app_name">My Form</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="cell">Cell</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="click_me">Click Me!</string>
    <string name="about_us">About Us</string>
    <string name="send_email">Send Email</string>
    <string name="check_version_number">Check Version Number</string>
    <string name="quit">Quit</string>
    <string name="contact_us">Contact Us</string>
</resources>
